--- a/app/build.gradle
+++ b/app/build.gradle
@@ -221,6 +221,8 @@ dependencies {
 
   implementation "io.sentry:sentry-android:$project.sentry_version"
 
+  implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
   testImplementation "junit:junit:$project.junit_version"
   testImplementation "org.mockito:mockito-core:$project.mockito_version"
   androidTestImplementation "androidx.test.ext:junit:$project.test_ext_version"
