--- a/app/build.gradle
+++ b/app/build.gradle
@@ -191,7 +191,7 @@ dependencies {
   implementation "com.adyen.checkout:card-ui:$project.adyen_version"
   implementation "com.adyen.checkout:redirect:$project.adyen_version"
 
-  implementation "io.intercom.android:intercom-sdk-base:$project.intercom_version"
+  implementation "io.intercom.android:intercom-sdk:$project.intercom_version"
 
   implementation "io.rakam:android-sdk:$project.rakam_version"
 
