--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ project.ext {
   rxbinding_version = '2.1.1'
   rxjava_version = '2.2.19'
   rxlifecycle_version = '1.0'
+  shimmer_version = '0.5.0'
   spongycastle_version = '1.58.0.0@jar'
   test_ext_version = '1.1.1'
   vector_drawable_version = '1.0.1'
