[MOB-828] Added cancel handling and updated 3ds lib to latest version

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ allprojects {
 }
 project.ext {
   adyen_version = '3.5.1'
+  adyen_3DS_version = '3.6.6'
   appcompat_version = '1.1.0'
   aptoide_analytics_version = '1.0.3'
   asf_applications_version = '6'
