--- a/app/build.gradle
+++ b/app/build.gradle
@@ -223,7 +223,7 @@ dependencies {
 
   implementation "io.sentry:sentry-android:$project.sentry_version"
 
-  implementation "com.adyen.checkout:3ds2:$project.adyen_version"
+  implementation "com.adyen.checkout:3ds2:$project.adyen_3DS_version"
 
   implementation "com.facebook.shimmer:shimmer:$project.shimmer_version"
 
