[MOB-168] Updated Subs Api

--- a/gradle.properties
+++ b/gradle.properties
@@ -54,8 +54,10 @@ TRANSACTION_DETAILS_HOST="https://appcexplorer.io/transaction/"
 TRANSACTION_DETAILS_HOST_ROPSTEN="https://ropsten.appscan.ga/transaction/"
 MY_APPCOINS_BASE_HOST="https://www.myappcoins.com/"
 MY_APPCOINS_BASE_HOST_DEV="https://dev.myappcoins.com/"
-CATAPPULT_BASE_HOST_PROD="https://api.catappult.io/"
-CATAPPULT_BASE_HOST_DEV="https://api-dev.blockchainds.com/"
+LEGACY_CATAPPULT_BASE_HOST_PROD="https://api.catappult.io/"
+LEGACY_CATAPPULT_BASE_HOST_DEV="https://api-dev.blockchainds.com/"
+CATAPPULT_HOST_PROD="https://api.blockchainds.com"
+CATAPPULT_HOST_DEV="https://api-dev.catappult.io"
 FLURRY_APK_KEY="your_flurry_key"
 APTOIDE_PACKAGE_NAME="cm.aptoide.pt"
 APTOIDE_PACKAGE_NAME_DEV="cm.aptoide.pt.dev"
