--- a/app/build.gradle
+++ b/app/build.gradle
@@ -225,6 +225,8 @@ dependencies {
 
   implementation "com.facebook.shimmer:shimmer:$project.shimmer_version"
 
+  implementation 'androidx.biometric:biometric:1.0.1'
+
   testImplementation "junit:junit:$project.junit_version"
   testImplementation "org.mockito:mockito-core:$project.mockito_version"
   androidTestImplementation "androidx.test.ext:junit:$project.test_ext_version"
