--- a/app/build.gradle
+++ b/app/build.gradle
@@ -190,6 +190,7 @@ dependencies {
 
   implementation "com.adyen.checkout:card-ui:$project.adyen_version"
   implementation "com.adyen.checkout:redirect:$project.adyen_version"
+  implementation "com.adyen.checkout:3ds2:$project.adyen_version"
 
   implementation "io.intercom.android:intercom-sdk:$project.intercom_version"
 
@@ -222,8 +223,6 @@ dependencies {
   implementation "com.hendraanggrian.material:collapsingtoolbarlayout-subtitle:$project.collapsingtoolbarlayout_version"
 
   implementation "io.sentry:sentry-android:$project.sentry_version"
-
-  implementation "com.adyen.checkout:3ds2:$project.adyen_3DS_version"
 
   implementation "com.facebook.shimmer:shimmer:$project.shimmer_version"
 
