[MOB-892] Bug fixes and bottomsheet rework. Extract to logic so separate activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -252,6 +252,13 @@
         android:name="com.asfoundation.wallet.fingerprint.ManageFingerprintActivity"
         android:label="Fingerprint" />
 
+    <activity
+        android:name="com.asfoundation.wallet.ui.AuthenticationPromptActivity"
+        android:label="Authentication Activity"
+        android:launchMode="singleInstance"
+        android:theme="@style/Theme.AppCompat.Transparent.NoDisplay"
+        />
+
     <service
         android:name="com.asfoundation.wallet.support.SupportMessagingService"
         android:enabled="true"
