[MOB-892] Improved code as request in the review.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -254,10 +254,8 @@
 
     <activity
         android:name="com.asfoundation.wallet.ui.AuthenticationPromptActivity"
-        android:label="Authentication Activity"
         android:launchMode="singleInstance"
-        android:theme="@style/Theme.AppCompat.Transparent.NoDisplay"
-        />
+        android:theme="@style/Theme.AppCompat.Transparent.NoDisplay" />
 
     <service
         android:name="com.asfoundation.wallet.support.SupportMessagingService"
