--- a/app/build.gradle
+++ b/app/build.gradle
@@ -226,7 +226,7 @@ dependencies {
 
   implementation "com.facebook.shimmer:shimmer:$project.shimmer_version"
 
-  implementation 'androidx.biometric:biometric:1.0.1'
+  implementation "androidx.biometric:biometric:$project.biometrics_version"
 
   testImplementation "junit:junit:$project.junit_version"
   testImplementation "org.mockito:mockito-core:$project.mockito_version"
