[MOB-955] Amplitude integration;

--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,7 @@ project.ext {
   zxing_android_version = '3.6.0'
   zxing_version = '3.4.0'
   sentry_version = '1.7.30'
+  amplitude_version = '2.25.2'
 }
 
 task clean(type: Delete) {
