--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ android {
     resValue "string", "facebook_app_id", project.FACEBOOK_APP_KEY
     buildConfigField 'String', 'INFURA_API_KEY_MAIN', project.INFURA_API_KEY_MAIN
     buildConfigField 'String', 'INFURA_API_KEY_ROPSTEN', project.INFURA_API_KEY_ROPSTEN
+    buildConfigField 'String', 'AMPLITUDE_API_KEY', project.AMPLITUDE_API_KEY
     manifestPlaceholders.facebookKey = "${project.FACEBOOK_APP_KEY}"
   }
 
@@ -225,6 +226,9 @@ dependencies {
   implementation "io.sentry:sentry-android:$project.sentry_version"
 
   implementation "com.facebook.shimmer:shimmer:$project.shimmer_version"
+
+  //Amplitude
+  implementation "com.amplitude:android-sdk:$project.amplitude_version"
 
   testImplementation "junit:junit:$project.junit_version"
   testImplementation "org.mockito:mockito-core:$project.mockito_version"
