--- a/gradle.properties
+++ b/gradle.properties
@@ -71,3 +71,4 @@ SENTRY_DSN_KEY="SENTRY_DSN_KEY"
 SENTRY_DSN_KEY_DEV="SENTRY_DSN_KEY_DEV"
 INFURA_API_KEY_MAIN="INFURA_API_KEY_MAIN"
 INFURA_API_KEY_ROPSTEN="INFURA_API_KEY_ROPSTEN"
+AMPLITUDE_API_KEY="AMPLITUDE_API_KEY"
