[MOB-893] Remade bottom sheet to avoid problems with lib 1.2.0 material. Started implementing logic about authentication error time between attempts.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -255,7 +255,7 @@
     <activity
         android:name="com.asfoundation.wallet.ui.AuthenticationPromptActivity"
         android:launchMode="singleInstance"
-        android:theme="@style/Theme.AppCompat.Transparent.NoDisplay" />
+        android:theme="@style/Theme.AppCompat.Transparent.NoFloating" />
 
     <service
         android:name="com.asfoundation.wallet.support.SupportMessagingService"
