--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -216,8 +216,7 @@
         android:label="" />
     <activity
         android:name="com.asfoundation.wallet.promotions.PromotionsActivity"
-        android:label="@string/promotions_title"
-        android:screenOrientation="portrait" />
+        android:label="@string/promotions_title" />
     <activity
         android:name="com.asfoundation.wallet.referrals.InviteFriendsActivity"
         android:label="@string/referral_view_title"
