--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -249,7 +249,7 @@
 
     <activity
         android:name="com.asfoundation.wallet.ui.AuthenticationPromptActivity"
-        android:launchMode="singleInstance"
+        android:launchMode="singleTask"
         android:theme="@style/Theme.AppCompat.Transparent.NoFloating" />
 
     <service
