[WAL-54] Improved error handling. Locked rotation to avoid a bad experience from the user

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -249,6 +249,7 @@
     <activity
         android:name="com.asfoundation.wallet.ui.AuthenticationPromptActivity"
         android:launchMode="singleTask"
+        android:screenOrientation="locked"
         android:theme="@style/Theme.AppCompat.Transparent.NoFloating" />
 
     <service
