[WAL-49] Added support to catch myappcoins support url on topup local payments

--- a/gradle.properties
+++ b/gradle.properties
@@ -41,6 +41,8 @@ NETWORK_ID_DEV=3
 APPCOINS_IAB_PERMISSION=com.appcoins.BILLING
 APPCOINS_DEV_IAB_PERMISSION=com.appcoins.dev.BILLING
 FACEBOOK_APP_KEY=your_facebook_app_key
+MY_APPCOINS_SUPPORT_HOST="https://www.myappcoins.com/"
+MY_APPCOINS_HOST_SUPPORT_DEV="https://dev.myappcoins.com/"
 MANIFEST_PAYMENT_HOST=apichain.blockchainds.com
 MANIFEST_PAYMENT_HOST_DEV=apichain-dev.blockchainds.com
 MANIFEST_SECOND_PAYMENT_HOST=apichain.catappult.io
