--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
         android:name="com.asfoundation.wallet.ui.onboarding.OnboardingActivity"
         android:label="" />
     <activity
-        android:name="com.asfoundation.wallet.ui.balance.RestoreWalletActivity"
+        android:name="com.asfoundation.wallet.restore.RestoreWalletActivity"
         android:label="@string/title_import"
         android:windowSoftInputMode="stateHidden" />
     <activity
