[WAL-74] Added base logic for wallet verification fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -251,6 +251,11 @@
         android:launchMode="singleTask"
         android:theme="@style/Theme.AppCompat.Transparent.NoFloating" />
 
+    <activity
+        android:name="com.asfoundation.wallet.wallet_verification.WalletVerificationActivity"
+        android:label="Verify Wallet"
+        android:windowSoftInputMode="stateHidden" />
+
     <service
         android:name="com.asfoundation.wallet.support.SupportMessagingService"
         android:enabled="true"
