--- a/app/build.gradle
+++ b/app/build.gradle
@@ -235,6 +235,8 @@ dependencies {
 
   implementation "androidx.core:core-ktx:$project.corektx_version"
 
+  implementation "androidx.work:work-runtime-ktx:$project.work_version"
+  implementation "androidx.work:work-rxjava2:$project.work_version"
 
   //Amplitude
   implementation "com.amplitude:android-sdk:$project.amplitude_version"
