--- a/gradle.properties
+++ b/gradle.properties
@@ -52,7 +52,7 @@ SECOND_PAYMENT_HOST="apichain.catappult.io"
 SECOND_PAYMENT_HOST2=apichain.catappult.io
 TRANSACTION_DETAILS_HOST="https://appcexplorer.io/transaction/"
 TRANSACTION_DETAILS_HOST_ROPSTEN="https://ropsten.appscan.ga/transaction/"
-MY_APPCOINS_BASE_HOST="https://www.myappcoins.com/"
+MY_APPCOINS_BASE_HOST="https://myappcoins.com/"
 MY_APPCOINS_BASE_HOST_DEV="https://test.myappcoins.com/"
 CATAPPULT_BASE_HOST_PROD="https://api.catappult.io/"
 CATAPPULT_BASE_HOST_DEV="https://api-dev.blockchainds.com/"
