--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
         android:label="@string/app_name"
         android:theme="@style/MaterialAppTheme" />
     <activity
-        android:name="com.asfoundation.wallet.ui.SettingsActivity"
+        android:name="com.asfoundation.wallet.ui.settings.SettingsActivity"
         android:label="@string/title_activity_settings" />
     <activity
         android:name="com.asfoundation.wallet.ui.balance.TransactionDetailActivity"
