--- a/gradle.properties
+++ b/gradle.properties
@@ -34,8 +34,8 @@ BASE_HOST_PROD="https://api.blockchainds.com"
 BASE_HOST_DEV="https://api-dev.blockchainds.com"
 BDS_BASE_HOST_PROD="https://ws75-secondary.aptoide.com/api/"
 BDS_BASE_HOST_DEV="https://ws75-devel.aptoide.com/api/"
-BACKEND_HOST_PROD="https://apichain.blockchainds.com"
-BACKEND_HOST_DEV="https://apichain-dev.blockchainds.com"
+BACKEND_HOST_PROD="https://apichain.catappult.io"
+BACKEND_HOST_DEV="https://apichain.dev.catappult.io"
 NETWORK_ID_PROD=1
 NETWORK_ID_DEV=3
 APPCOINS_IAB_PERMISSION=com.appcoins.BILLING
