--- a/gradle.properties
+++ b/gradle.properties
@@ -46,6 +46,7 @@ MANIFEST_PAYMENT_HOST_DEV=apichain-dev.blockchainds.com
 MANIFEST_SECOND_PAYMENT_HOST=apichain.catappult.io
 PAYMENT_HOST="apichain.blockchainds.com"
 PAYMENT_HOST_DEV="apichain-dev.blockchainds.com"
+PAYMENT_HOST2=apichain.blockchainds.com
 SECOND_PAYMENT_HOST="apichain.catappult.io"
 TRANSACTION_DETAILS_HOST="https://appcexplorer.io/transaction/"
 TRANSACTION_DETAILS_HOST_ROPSTEN="https://ropsten.appscan.ga/transaction/"
