[WAL-15] updated enpoints to support migration of services

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,7 +31,7 @@ REGISTER_PROOF_GAS_LIMIT="250000"
 PAYMENT_GAS_LIMIT="125000"
 BILLING_SUPPORTED_VERSION=3
 BASE_HOST_PROD="https://api.blockchainds.com"
-BASE_HOST_DEV="https://api.dev.catappult.io"
+BASE_HOST_DEV="https://api.dev.blockchainds.com"
 BDS_BASE_HOST_PROD="https://ws75-secondary.aptoide.com/api/"
 BDS_BASE_HOST_DEV="https://ws75-devel.aptoide.com/api/"
 BACKEND_HOST_PROD="https://apichain.catappult.io"
@@ -46,14 +46,13 @@ MANIFEST_PAYMENT_HOST_DEV=apichain-dev.blockchainds.com
 MANIFEST_SECOND_PAYMENT_HOST=apichain.catappult.io
 PAYMENT_HOST="apichain.blockchainds.com"
 PAYMENT_HOST_DEV="apichain-dev.blockchainds.com"
-PAYMENT_HOST2=apichain.blockchainds.com
 SECOND_PAYMENT_HOST="apichain.catappult.io"
 TRANSACTION_DETAILS_HOST="https://appcexplorer.io/transaction/"
 TRANSACTION_DETAILS_HOST_ROPSTEN="https://ropsten.appscan.ga/transaction/"
 MY_APPCOINS_BASE_HOST="https://myappcoins.com/"
 MY_APPCOINS_BASE_HOST_DEV="https://test.myappcoins.com/"
 CATAPPULT_BASE_HOST_PROD="https://api.catappult.io/"
-CATAPPULT_BASE_HOST_DEV="https://api.dev.catappult.io/"
+CATAPPULT_BASE_HOST_DEV="https://api.dev.blockchainds.com"
 FLURRY_APK_KEY="your_flurry_key"
 APTOIDE_PACKAGE_NAME="cm.aptoide.pt"
 APTOIDE_PACKAGE_NAME_DEV="cm.aptoide.pt.dev"
