[WAL-88] Converted SplashActivity to kotlin and to new architecture. Changed increase times on home to only increase when the user opens the app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
         android:value="@string/facebook_app_id" />
 
     <activity
-        android:name="com.asfoundation.wallet.ui.SplashActivity"
+        android:name="com.asfoundation.wallet.ui.splash.SplashActivity"
         android:theme="@style/SplashTheme">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
