--- a/gradle.properties
+++ b/gradle.properties
@@ -53,6 +53,8 @@ MY_APPCOINS_BASE_HOST="https://myappcoins.com/"
 MY_APPCOINS_BASE_HOST_DEV="https://test.myappcoins.com/"
 CATAPPULT_BASE_HOST_PROD="https://api.catappult.io/"
 CATAPPULT_BASE_HOST_DEV="https://api.dev.blockchainds.com"
+APTOIDE_WEB_SERVICES_AB_TESTING_HOST="https://abtesting.aptoide.com/api/v1/"
+APTOIDE_WEB_SERVICES_AB_TEST_HOST="https://abtest.aptoide.com/"
 FLURRY_APK_KEY="your_flurry_key"
 APTOIDE_PACKAGE_NAME="cm.aptoide.pt"
 APTOIDE_PACKAGE_NAME_DEV="cm.aptoide.pt.dev"
@@ -69,3 +71,4 @@ SENTRY_DSN_KEY_DEV="SENTRY_DSN_KEY_DEV"
 INFURA_API_KEY_MAIN="INFURA_API_KEY_MAIN"
 INFURA_API_KEY_ROPSTEN="INFURA_API_KEY_ROPSTEN"
 AMPLITUDE_API_KEY="AMPLITUDE_API_KEY"
+
