[WAL-78] Made small improvements and fixes to initial ab test implementation

--- a/gradle.properties
+++ b/gradle.properties
@@ -54,7 +54,7 @@ MY_APPCOINS_BASE_HOST_DEV="https://test.myappcoins.com/"
 CATAPPULT_BASE_HOST_PROD="https://api.catappult.io/"
 CATAPPULT_BASE_HOST_DEV="https://api.dev.blockchainds.com"
 APTOIDE_WEB_SERVICES_AB_TESTING_HOST="https://abtesting.aptoide.com/api/v1/"
-APTOIDE_WEB_SERVICES_AB_TEST_HOST="https://abtest.aptoide.com/"
+APTOIDE_WEB_SERVICES_AB_TEST_HOST="https://abtest.aptoide.com/api/v1/"
 FLURRY_APK_KEY="your_flurry_key"
 APTOIDE_PACKAGE_NAME="cm.aptoide.pt"
 APTOIDE_PACKAGE_NAME_DEV="cm.aptoide.pt.dev"
