Update version for proxy sdk to version that is now updated for the new domain on catappult.io

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -210,8 +210,9 @@ dependencies {
   implementation "aptoide-client-v8:aptoide-analytics-core:$project.aptoide_analytics_version"
 
   implementation "com.asfoundation:applications:$project.asf_applications_version"
-  implementation "com.asfoundation:appcoins-contract-proxy:$project.asf_sdk_version"
   implementation "com.asfoundation:ethereumj-android:$project.ethereumj_sdk_version"
+  implementation "com.blockchainds:appcoins-contract-proxy:0.5.5.5"
+  debugImplementation "com.blockchainds:appcoins-contract-proxy:0.6.6.3.dev"
 
   implementation "com.google.firebase:firebase-messaging:$project.firebase_messaging"
 
