--- a/app/build.gradle
+++ b/app/build.gradle
@@ -211,8 +211,8 @@ dependencies {
 
   implementation "com.asfoundation:applications:$project.asf_applications_version"
   implementation "com.asfoundation:ethereumj-android:$project.ethereumj_sdk_version"
-  implementation "com.blockchainds:appcoins-contract-proxy:0.5.5.5"
-  debugImplementation "com.blockchainds:appcoins-contract-proxy:0.6.6.3.dev"
+  implementation "com.blockchainds:appcoins-contract-proxy:$project.appcoins_sdk_version"
+  debugImplementation "com.blockchainds:appcoins-contract-proxy:$project.appcoins_sdk_dev_version"
 
   implementation "com.google.firebase:firebase-messaging:$project.firebase_messaging"
 
