--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,8 @@ project.ext {
   aptoide_analytics_version = '1.0.3'
   asf_applications_version = '6'
   asf_sdk_version = "0.4.5.19b"
-  bds_sdk_version = '0.5.5.4'
+  appcoins_sdk_version = '0.5.5.5'
+  appcoins_sdk_dev_version = '0.6.6.3.dev'
   biometrics_version = '1.0.1'
   cardview_version = '1.0.0'
   collapsingtoolbarlayout_version = '1.0.0'
