--- a/gradle.properties
+++ b/gradle.properties
@@ -69,3 +69,5 @@ SENTRY_DSN_KEY_DEV="SENTRY_DSN_KEY_DEV"
 INFURA_API_KEY_MAIN="INFURA_API_KEY_MAIN"
 INFURA_API_KEY_ROPSTEN="INFURA_API_KEY_ROPSTEN"
 AMPLITUDE_API_KEY="AMPLITUDE_API_KEY"
+FEEDBACK_ZENDESK_BASE_HOST="https://kenobidevs.zendesk.com/api/v2/"
+FEEDBACK_ZENDESK_API_KEY="FEEDBACK_ZENDESK_API_KEY"
