WAL-131 - Implemented remember function to billing address

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -244,6 +244,8 @@ dependencies {
 
   implementation "androidx.biometric:biometric:$project.biometrics_version"
 
+  implementation "androidx.security:security-crypto:$project.securitycrypto_version"
+
   testImplementation "junit:junit:$project.junit_version"
   testImplementation "org.mockito:mockito-core:$project.mockito_version"
   androidTestImplementation "androidx.test.ext:junit:$project.test_ext_version"
