--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,7 @@ project.ext {
   amplitude_version = '2.25.2'
   corektx_version = '1.3.2'
   work_version = '2.4.0'
+  securitycrypto_version = '1.1.0-alpha03'
 }
 
 task clean(type: Delete) {
