--- a/gradle.properties
+++ b/gradle.properties
@@ -53,6 +53,8 @@ MY_APPCOINS_BASE_HOST="https://myappcoins.com/"
 MY_APPCOINS_BASE_HOST_DEV="https://test.myappcoins.com/"
 CATAPPULT_BASE_HOST_PROD="https://api.catappult.io/"
 CATAPPULT_BASE_HOST_DEV="https://api.dev.blockchainds.com"
+CATAPPULT_NEO_BASE_HOST_PROD="https://api.blockchainds.com"
+CATAPPULT_NEO_BASE_HOST_DEV="https://api.dev.catappult.io"
 APTOIDE_WEB_SERVICES_AB_TEST_HOST="https://abtest.aptoide.com/api/v1/"
 FLURRY_APK_KEY="your_flurry_key"
 APTOIDE_PACKAGE_NAME="cm.aptoide.pt"
