--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ LEADING_ZEROS_ON_PROOF_OF_ATTENTION_DEBUG=4
 REGISTER_PROOF_GAS_LIMIT="250000"
 PAYMENT_GAS_LIMIT="125000"
 BILLING_SUPPORTED_VERSION=3
-BASE_HOST_PROD="https://api.blockchainds.com"
+BASE_HOST_PROD="https://api.catappult.io"
 BASE_HOST_DEV="https://api.dev.blockchainds.com"
 BDS_BASE_HOST_PROD="https://ws75-secondary.aptoide.com/api/"
 BDS_BASE_HOST_DEV="https://ws75-devel.aptoide.com/api/"
@@ -41,18 +41,16 @@ NETWORK_ID_DEV=3
 APPCOINS_IAB_PERMISSION=com.appcoins.BILLING
 APPCOINS_DEV_IAB_PERMISSION=com.appcoins.dev.BILLING
 FACEBOOK_APP_KEY=your_facebook_app_key
-MANIFEST_PAYMENT_HOST=apichain.blockchainds.com
+MANIFEST_LEGACY_PAYMENT_HOST=apichain.blockchainds.com
 MANIFEST_PAYMENT_HOST_DEV=apichain-dev.blockchainds.com
-MANIFEST_SECOND_PAYMENT_HOST=apichain.catappult.io
-PAYMENT_HOST="apichain.blockchainds.com"
+MANIFEST_PAYMENT_HOST=apichain.catappult.io
+LEGACY_PAYMENT_HOST="apichain.blockchainds.com"
 PAYMENT_HOST_DEV="apichain-dev.blockchainds.com"
-SECOND_PAYMENT_HOST="apichain.catappult.io"
+PAYMENT_HOST="apichain.catappult.io"
 TRANSACTION_DETAILS_HOST="https://appcexplorer.io/transaction/"
 TRANSACTION_DETAILS_HOST_ROPSTEN="https://ropsten.appcexplorer.io/transaction/"
 MY_APPCOINS_BASE_HOST="https://myappcoins.com/"
 MY_APPCOINS_BASE_HOST_DEV="https://dev.myappcoins.com/"
-CATAPPULT_BASE_HOST_PROD="https://api.catappult.io/"
-CATAPPULT_BASE_HOST_DEV="https://api.dev.blockchainds.com"
 APTOIDE_WEB_SERVICES_AB_TEST_HOST="https://abtest.aptoide.com/api/v1/"
 FLURRY_APK_KEY="your_flurry_key"
 APTOIDE_PACKAGE_NAME="cm.aptoide.pt"
