[APPC-2273] - Moved APTOIDE_TOP_APPS_URL to gradle.properties.

--- a/gradle.properties
+++ b/gradle.properties
@@ -70,3 +70,4 @@ INFURA_API_KEY_ROPSTEN="INFURA_API_KEY_ROPSTEN"
 AMPLITUDE_API_KEY="AMPLITUDE_API_KEY"
 FEEDBACK_ZENDESK_BASE_HOST="https://aptoide.zendesk.com/api/v2/"
 FEEDBACK_ZENDESK_API_KEY="FEEDBACK_ZENDESK_API_KEY"
+APTOIDE_TOP_APPS_URL="https://en.aptoide.com/store/catappult/group/group-10867"
