--- a/gradle.properties
+++ b/gradle.properties
@@ -70,4 +70,5 @@ INFURA_API_KEY_ROPSTEN="INFURA_API_KEY_ROPSTEN"
 AMPLITUDE_API_KEY="AMPLITUDE_API_KEY"
 FEEDBACK_ZENDESK_BASE_HOST="https://aptoide.zendesk.com/api/v2/"
 FEEDBACK_ZENDESK_API_KEY="FEEDBACK_ZENDESK_API_KEY"
+SUBS_BASE_HOST_DEV="https://api.dev.catappult.io"
 APTOIDE_TOP_APPS_URL="https://en.aptoide.com/store/catappult/group/group-10867"
