--- a/gamification/build.gradle
+++ b/gamification/build.gradle
@@ -35,7 +35,9 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-
+    staging {
+      initWith release
+    }
     debug {
       minifyEnabled false
     }
