--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
         android:name="com.asfoundation.wallet.ui.settings.SettingsActivity"
         android:label="@string/title_activity_settings" />
     <activity
-        android:name="com.asfoundation.wallet.ui.balance.TransactionDetailActivity"
+        android:name="com.asfoundation.wallet.ui.balance.detail.TransactionDetailActivity"
         android:label="" />
     <activity
         android:name="com.asfoundation.wallet.ui.MyAddressActivity"
