--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
+include ':skillz'
 include ':app', ':tn', ':airdrop', ':billing', ':appcoinsRewards', ':bdsbilling', ':commons', ':gamification', ':permissions'
