--- a/skillz/src/main/AndroidManifest.xml
+++ b/skillz/src/main/AndroidManifest.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="cm.aptoide.skills">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="cm.aptoide.skills">
+
+  <application>
+    <activity
+        android:name="cm.aptoide.skills.SkillsActivity"
+        android:exported="true"
+        android:label="">
+
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
