--- a/skills/build.gradle
+++ b/skills/build.gradle
@@ -38,6 +38,14 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.3.2'
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'com.google.android.material:material:1.3.0'
+
+  implementation "io.reactivex.rxjava2:rxjava:$project.rxjava_version"
+  implementation "io.reactivex.rxjava2:rxandroid:$project.rxandroid_version"
+  implementation "com.squareup.retrofit2:retrofit:$project.retrofit_version"
+  implementation "com.squareup.retrofit2:converter-gson:$project.retrofit_version"
+  implementation "com.squareup.retrofit2:adapter-rxjava2:$project.retrofit_version"
+  implementation "com.google.code.gson:gson:$project.gson_version"
+
   testImplementation 'junit:junit:4.+'
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
