--- a/skills/build.gradle
+++ b/skills/build.gradle
@@ -52,6 +52,8 @@ dependencies {
   implementation "com.google.dagger:dagger:$project.dagger_version"
   implementation "com.google.dagger:dagger-android-support:$project.dagger_version"
 
+  implementation "com.airbnb.android:lottie:$project.lottie_version"
+
   testImplementation 'junit:junit:4.+'
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
