Skills module - Defined staging and debug buildTypes.

--- a/skills/build.gradle
+++ b/skills/build.gradle
@@ -22,6 +22,12 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
+    staging {
+      initWith release
+    }
+    debug {
+      minifyEnabled false
+    }
   }
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
