:skills - build.gradle - Defined ndk version.

--- a/skills/build.gradle
+++ b/skills/build.gradle
@@ -17,6 +17,8 @@ android {
     consumerProguardFiles "consumer-rules.pro"
   }
 
+  ndkVersion "21.3.6528147"
+
   buildTypes {
     release {
       minifyEnabled false
