--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = "1.3.21"
+  ext.kotlin_version = "1.4.31"
 
   repositories {
     google()
@@ -10,7 +10,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.3.2'
+    classpath 'com.android.tools.build:gradle:4.1.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
@@ -46,7 +46,7 @@ project.ext {
   biometrics_version = '1.0.1'
   cardview_version = '1.0.0'
   collapsingtoolbarlayout_version = '1.0.0'
-  constraintlayout_version = '1.1.3'
+  constraintlayout_version = '2.0.4'
   cpp_version = '2.4.0'
   dagger_version = '2.27'
   erc681_version = '0.36'
@@ -94,6 +94,7 @@ project.ext {
   corektx_version = '1.3.2'
   work_version = '2.4.0'
   securitycrypto_version = '1.1.0-alpha03'
+  epoxy_version = '4.5.0'
 }
 
 task clean(type: Delete) {
