Prepared release variables.

--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,8 @@ BASE_HOST_PROD="https://api.catappult.io"
 BASE_HOST_DEV="https://api.dev.blockchainds.com"
 BDS_BASE_HOST_PROD="https://ws75-secondary.aptoide.com/api/"
 BDS_BASE_HOST_DEV="https://ws75-devel.aptoide.com/api/"
+BASE_HOST_SKILLS_PROD="https://api.eskills.catappult.io"
+BASE_HOST_SKILLS_DEV="https://api.eskills.dev.catappult.io"
 BACKEND_HOST_PROD="https://apichain.catappult.io"
 BACKEND_HOST_DEV="https://apichain.dev.catappult.io"
 NETWORK_ID_PROD=1
