--- a/skills/src/main/AndroidManifest.xml
+++ b/skills/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <activity
         android:name="cm.aptoide.skills.SkillsActivity"
         android:exported="true"
+        android:theme="@style/Theme.AppCompat.Transparent.FitAppWindow"
         android:label="">
 
       <intent-filter>
