PayTicketUseCase.kt now supports dev and prod variables.

--- a/gradle.properties
+++ b/gradle.properties
@@ -73,3 +73,5 @@ AMPLITUDE_API_KEY="AMPLITUDE_API_KEY"
 FEEDBACK_ZENDESK_BASE_HOST="https://aptoide.zendesk.com/api/v2/"
 FEEDBACK_ZENDESK_API_KEY="FEEDBACK_ZENDESK_API_KEY"
 APTOIDE_TOP_APPS_URL="https://en.aptoide.com/store/catappult/group/group-10867"
+WALLET_PACKAGE_PROD="com.appcoins.wallet"
+WALLET_PACKAGE_DEV="com.appcoins.wallet.dev"
