--- a/skills/build.gradle
+++ b/skills/build.gradle
@@ -24,6 +24,8 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       buildConfigField 'String', 'BASE_HOST_SKILLS', project.BASE_HOST_SKILLS_PROD
+      buildConfigField 'String', 'BASE_HOST', project.BACKEND_HOST_PROD
+      buildConfigField 'String', 'WALLET_PACKAGE', project.WALLET_PACKAGE_PROD
     }
     staging {
       initWith release
@@ -32,6 +34,8 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       buildConfigField 'String', 'BASE_HOST_SKILLS', project.BASE_HOST_SKILLS_DEV
+      buildConfigField 'String', 'BASE_HOST', project.BACKEND_HOST_DEV
+      buildConfigField 'String', 'WALLET_PACKAGE', project.WALLET_PACKAGE_DEV
     }
     staging {
       initWith release
