PayTicketUseCase.kt now supports dev and prod variables.

--- a/gradle.properties
+++ b/gradle.properties
@@ -36,6 +36,7 @@ BDS_BASE_HOST_PROD="https://ws75-secondary.aptoide.com/api/"
 BDS_BASE_HOST_DEV="https://ws75-devel.aptoide.com/api/"
 BASE_HOST_SKILLS_PROD="https://api.eskills.catappult.io"
 BASE_HOST_SKILLS_DEV="https://api.eskills.dev.catappult.io"
+BACKEND_HOST_DEV_BLOCKCHAINDS="https://apichain-dev.blockchainds.com"
 BACKEND_HOST_PROD="https://apichain.catappult.io"
 BACKEND_HOST_DEV="https://apichain.dev.catappult.io"
 NETWORK_ID_PROD=1
@@ -73,3 +74,5 @@ AMPLITUDE_API_KEY="AMPLITUDE_API_KEY"
 FEEDBACK_ZENDESK_BASE_HOST="https://aptoide.zendesk.com/api/v2/"
 FEEDBACK_ZENDESK_API_KEY="FEEDBACK_ZENDESK_API_KEY"
 APTOIDE_TOP_APPS_URL="https://en.aptoide.com/store/catappult/group/group-10867"
+WALLET_PACKAGE_PROD="com.appcoins.wallet"
+WALLET_PACKAGE_DEV="com.appcoins.wallet.dev"
