--- a/gradle.properties
+++ b/gradle.properties
@@ -71,3 +71,4 @@ AMPLITUDE_API_KEY="AMPLITUDE_API_KEY"
 FEEDBACK_ZENDESK_BASE_HOST="https://aptoide.zendesk.com/api/v2/"
 FEEDBACK_ZENDESK_API_KEY="FEEDBACK_ZENDESK_API_KEY"
 APTOIDE_TOP_APPS_URL="https://en.aptoide.com/store/catappult/group/group-10867"
+VIP_PROGRAM_BADGE_URL="https://appcoins.medium.com/welcome-to-the-appcoins-vip-program-7e5d133cc0ad"
