[eskills/uri-intent] - Implements startEskillsFlow via URI Uses existing OneStepPaymentReceiver to receive URI which will be BASE_HOST + /transaction/eskills. Note that no other activity can listen to this path, since this activity listens to /transaction (perhaps in the future we can change this to /inapp ?). Sends this URI to SkillsActivity which will proceed with the normal flow. This commit includes minor changes, like using price, currency and sku from URI instead of having hardcoded ones. Besides that, it also adds the new payment host to gradle.properties, meaning that we are now listening for apichain.dev.catappult.io and apichain-dev.blockchainds.com. This is only applicable to debug build type, since on release type we were already listening to both of them

--- a/gradle.properties
+++ b/gradle.properties
@@ -45,7 +45,8 @@ APPCOINS_IAB_PERMISSION=com.appcoins.BILLING
 APPCOINS_DEV_IAB_PERMISSION=com.appcoins.dev.BILLING
 FACEBOOK_APP_KEY=your_facebook_app_key
 MANIFEST_LEGACY_PAYMENT_HOST=apichain.blockchainds.com
-MANIFEST_PAYMENT_HOST_DEV=apichain-dev.blockchainds.com
+MANIFEST_LEGACY_PAYMENT_HOST_DEV=apichain-dev.blockchainds.com
+MANIFEST_PAYMENT_HOST_DEV=apichain.dev.catappult.io
 MANIFEST_PAYMENT_HOST=apichain.catappult.io
 LEGACY_PAYMENT_HOST="apichain.blockchainds.com"
 PAYMENT_HOST_DEV="apichain-dev.blockchainds.com"
