--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,8 @@ project.ext {
   corektx_version = '1.3.2'
   work_version = '2.4.0'
   securitycrypto_version = '1.1.0-alpha03'
+  commons_lang3_version = '3.7'
+  support_annotations = '27.1.0'
 }
 
 task clean(type: Delete) {
